[tool.poetry]
name = "auth"
version = "0.1.0"
description = "auth micro service"
authors = ["嘉然今天吃什么 <jsclndnz@outlook.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.9"
sanic = { extras = ["ext"], version = "^21.12.1" }
tortoise-orm = "^0.18.1"
aiomysql = "^0.0.22"
aiosqlite = "^0.17.0"
pycryptodome = "^3.14.1"
aerich = "^0.6.2"
pydantic = "^1.9.0"
PyJWT = {extras = ["crypto"], version = "^2.3.0"}

[tool.poetry.dev-dependencies]
sanic-testing = "^0.8.2"
pytest-asyncio = "^0.18.1"


[tool.aerich]
tortoise_orm = "models.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
